1. 调整组件实例取值
Change-Id: I739824c56934bb348fc72efb4ce0a755c9bffe50